# todo-fastapi

./: .gitignore  README.md  pyproject.toml  todo.db-shm  todo.db-wal
app/: main.py
app/config/: config.py
app/models/: todo.py
app/routes/: todo.py
app/schemas/: todo.py
